src/network_policies/test2monitoring-fluidos-consumer-fe7e79b16b0518324102bc6882ba3bcfeae45d36f63cea3fec802bb0ff658d91ca2294 Egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test2monitoring-fluidos-consumer-fe7e79b16b0518324102bc6882ba3bcfeae45d36f63cea3fec802bb0ff658d91ca2294
  namespace: monitoring-fluidos-consumer-fe7e79
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app: resource-monitor
  egress:
  - ports:
    - port: 80
      protocol: TCP
    to:
    - ipBlock:
        cidr: 142.250.0.0/15
